# serializer version: 1
# name: test_all_entities[time.neopool_light_timer_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_light_timer_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Light timer - start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light timer - start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_light_start',
    'unique_id': '1234567890_relay_light_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_light_timer_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Light timer - start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_light_timer_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_light_timer_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_light_timer_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Light timer - stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light timer - stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_light_stop',
    'unique_id': '1234567890_relay_light_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_light_timer_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Light timer - stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_light_timer_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_1_filtration_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_1_filtration_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer 1 - filtration start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer 1 - filtration start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filtration_start',
    'unique_id': '1234567890_filtration1_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_1_filtration_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer 1 - filtration start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_1_filtration_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_1_filtration_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_1_filtration_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer 1 - filtration stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer 1 - filtration stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filtration_stop',
    'unique_id': '1234567890_filtration1_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_1_filtration_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer 1 - filtration stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_1_filtration_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_2_filtration_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_2_filtration_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer 2 - filtration start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer 2 - filtration start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filtration_start',
    'unique_id': '1234567890_filtration2_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_2_filtration_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer 2 - filtration start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_2_filtration_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_2_filtration_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_2_filtration_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer 2 - filtration stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer 2 - filtration stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filtration_stop',
    'unique_id': '1234567890_filtration2_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_2_filtration_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer 2 - filtration stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_2_filtration_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_3_filtration_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_3_filtration_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer 3 - filtration start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer 3 - filtration start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filtration_start',
    'unique_id': '1234567890_filtration3_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_3_filtration_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer 3 - filtration start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_3_filtration_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_3_filtration_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_3_filtration_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer 3 - filtration stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer 3 - filtration stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filtration_stop',
    'unique_id': '1234567890_filtration3_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_3_filtration_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer 3 - filtration stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_3_filtration_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_aux1_1_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux1_1_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux1 (1) - start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux1 (1) - start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux1_start',
    'unique_id': '1234567890_relay_aux1_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_aux1_1_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux1 (1) - start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux1_1_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_aux1_1_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux1_1_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux1 (1) - stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux1 (1) - stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux1_stop',
    'unique_id': '1234567890_relay_aux1_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_aux1_1_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux1 (1) - stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux1_1_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_aux1_2_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux1_2_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux1 (2) - start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux1 (2) - start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux1b_start',
    'unique_id': '1234567890_relay_aux1b_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_aux1_2_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux1 (2) - start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux1_2_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_aux1_2_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux1_2_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux1 (2) - stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux1 (2) - stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux1b_stop',
    'unique_id': '1234567890_relay_aux1b_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_aux1_2_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux1 (2) - stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux1_2_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_aux2_1_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux2_1_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux2 (1) - start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux2 (1) - start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux2_start',
    'unique_id': '1234567890_relay_aux2_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_aux2_1_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux2 (1) - start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux2_1_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_aux2_1_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux2_1_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux2 (1) - stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux2 (1) - stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux2_stop',
    'unique_id': '1234567890_relay_aux2_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_aux2_1_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux2 (1) - stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux2_1_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_aux2_2_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux2_2_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux2 (2) - start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux2 (2) - start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux2b_start',
    'unique_id': '1234567890_relay_aux2b_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_aux2_2_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux2 (2) - start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux2_2_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_aux2_2_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux2_2_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux2 (2) - stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux2 (2) - stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux2b_stop',
    'unique_id': '1234567890_relay_aux2b_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_aux2_2_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux2 (2) - stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux2_2_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_aux3_1_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux3_1_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux3 (1) - start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux3 (1) - start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux3_start',
    'unique_id': '1234567890_relay_aux3_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_aux3_1_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux3 (1) - start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux3_1_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_aux3_1_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux3_1_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux3 (1) - stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux3 (1) - stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux3_stop',
    'unique_id': '1234567890_relay_aux3_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_aux3_1_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux3 (1) - stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux3_1_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_aux3_2_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux3_2_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux3 (2) - start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux3 (2) - start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux3b_start',
    'unique_id': '1234567890_relay_aux3b_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_aux3_2_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux3 (2) - start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux3_2_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_aux3_2_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux3_2_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux3 (2) - stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux3 (2) - stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux3b_stop',
    'unique_id': '1234567890_relay_aux3b_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_aux3_2_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux3 (2) - stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux3_2_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_aux4_1_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux4_1_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux4 (1) - start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux4 (1) - start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux4_start',
    'unique_id': '1234567890_relay_aux4_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_aux4_1_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux4 (1) - start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux4_1_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_aux4_1_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux4_1_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux4 (1) - stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux4 (1) - stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux4_stop',
    'unique_id': '1234567890_relay_aux4_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_aux4_1_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux4 (1) - stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux4_1_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_aux4_2_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux4_2_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux4 (2) - start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux4 (2) - start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux4b_start',
    'unique_id': '1234567890_relay_aux4b_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_aux4_2_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux4 (2) - start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux4_2_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[time.neopool_timer_aux4_2_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux4_2_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux4 (2) - stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux4 (2) - stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux4b_stop',
    'unique_id': '1234567890_relay_aux4b_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[time.neopool_timer_aux4_2_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux4 (2) - stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux4_2_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_light_timer_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_light_timer_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Light timer - start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light timer - start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_light_start',
    'unique_id': '1234567890_relay_light_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_light_timer_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Light timer - start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_light_timer_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_light_timer_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_light_timer_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Light timer - stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light timer - stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_light_stop',
    'unique_id': '1234567890_relay_light_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_light_timer_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Light timer - stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_light_timer_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_1_filtration_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_1_filtration_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer 1 - filtration start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer 1 - filtration start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filtration_start',
    'unique_id': '1234567890_filtration1_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_1_filtration_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer 1 - filtration start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_1_filtration_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_1_filtration_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_1_filtration_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer 1 - filtration stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer 1 - filtration stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filtration_stop',
    'unique_id': '1234567890_filtration1_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_1_filtration_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer 1 - filtration stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_1_filtration_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_2_filtration_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_2_filtration_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer 2 - filtration start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer 2 - filtration start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filtration_start',
    'unique_id': '1234567890_filtration2_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_2_filtration_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer 2 - filtration start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_2_filtration_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_2_filtration_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_2_filtration_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer 2 - filtration stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer 2 - filtration stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filtration_stop',
    'unique_id': '1234567890_filtration2_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_2_filtration_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer 2 - filtration stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_2_filtration_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_3_filtration_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_3_filtration_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer 3 - filtration start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer 3 - filtration start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filtration_start',
    'unique_id': '1234567890_filtration3_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_3_filtration_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer 3 - filtration start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_3_filtration_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_3_filtration_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_3_filtration_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer 3 - filtration stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer 3 - filtration stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filtration_stop',
    'unique_id': '1234567890_filtration3_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_3_filtration_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer 3 - filtration stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_3_filtration_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux1_1_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux1_1_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux1 (1) - start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux1 (1) - start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux1_start',
    'unique_id': '1234567890_relay_aux1_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux1_1_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux1 (1) - start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux1_1_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux1_1_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux1_1_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux1 (1) - stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux1 (1) - stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux1_stop',
    'unique_id': '1234567890_relay_aux1_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux1_1_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux1 (1) - stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux1_1_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux1_2_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux1_2_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux1 (2) - start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux1 (2) - start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux1b_start',
    'unique_id': '1234567890_relay_aux1b_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux1_2_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux1 (2) - start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux1_2_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux1_2_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux1_2_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux1 (2) - stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux1 (2) - stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux1b_stop',
    'unique_id': '1234567890_relay_aux1b_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux1_2_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux1 (2) - stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux1_2_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux2_1_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux2_1_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux2 (1) - start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux2 (1) - start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux2_start',
    'unique_id': '1234567890_relay_aux2_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux2_1_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux2 (1) - start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux2_1_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux2_1_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux2_1_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux2 (1) - stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux2 (1) - stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux2_stop',
    'unique_id': '1234567890_relay_aux2_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux2_1_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux2 (1) - stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux2_1_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux2_2_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux2_2_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux2 (2) - start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux2 (2) - start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux2b_start',
    'unique_id': '1234567890_relay_aux2b_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux2_2_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux2 (2) - start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux2_2_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux2_2_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux2_2_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux2 (2) - stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux2 (2) - stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux2b_stop',
    'unique_id': '1234567890_relay_aux2b_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux2_2_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux2 (2) - stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux2_2_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux3_1_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux3_1_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux3 (1) - start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux3 (1) - start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux3_start',
    'unique_id': '1234567890_relay_aux3_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux3_1_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux3 (1) - start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux3_1_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux3_1_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux3_1_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux3 (1) - stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux3 (1) - stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux3_stop',
    'unique_id': '1234567890_relay_aux3_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux3_1_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux3 (1) - stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux3_1_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux3_2_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux3_2_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux3 (2) - start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux3 (2) - start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux3b_start',
    'unique_id': '1234567890_relay_aux3b_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux3_2_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux3 (2) - start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux3_2_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux3_2_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux3_2_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux3 (2) - stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux3 (2) - stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux3b_stop',
    'unique_id': '1234567890_relay_aux3b_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux3_2_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux3 (2) - stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux3_2_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux4_1_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux4_1_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux4 (1) - start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux4 (1) - start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux4_start',
    'unique_id': '1234567890_relay_aux4_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux4_1_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux4 (1) - start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux4_1_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux4_1_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux4_1_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux4 (1) - stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux4 (1) - stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux4_stop',
    'unique_id': '1234567890_relay_aux4_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux4_1_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux4 (1) - stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux4_1_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux4_2_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux4_2_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux4 (2) - start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux4 (2) - start',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux4b_start',
    'unique_id': '1234567890_relay_aux4b_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux4_2_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux4 (2) - start',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux4_2_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux4_2_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.neopool_timer_aux4_2_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Timer Aux4 (2) - stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer Aux4 (2) - stop',
    'platform': 'neopool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_aux4b_stop',
    'unique_id': '1234567890_relay_aux4b_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_when_modules_absent[time.neopool_timer_aux4_2_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'NeoPool Timer Aux4 (2) - stop',
    }),
    'context': <ANY>,
    'entity_id': 'time.neopool_timer_aux4_2_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
